--- a/views/page-not-found.pug
+++ b/views/page-not-found.pug
@@ -1,6 +1,6 @@
 extends layout
 
 block content
-  p= error.status
-  p
-    a(class="button" href='/') Home
+  h2= `${err.status} | ${title}`
+  p Looks like we don't have that book. Try another.
+  a(class="button" href='/') Home
