--- a/views/page-not-found.pug
+++ b/views/page-not-found.pug
@@ -1,6 +1,6 @@
 extends layout
 
 block content
-  h2= `${err.status} | ${title}`
+  h2= `${err.status} | ${err.message}`
   p Looks like we don't have that book. Try another.
   a(class="button" href='/') Home
